--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         }
   
         sessionStorage.setItem('ad', ad);
+        sessionStorage.setItem('email', email);
         sessionStorage.setItem('telefon', telefon);
         window.location.href = 'oyun.html';
   
