--- a/oyun.html
+++ b/oyun.html
@@ -41,7 +41,7 @@
       { question: "Yangın tüpü hangi renktedir?", choices: ["Sarı", "Mavi", "Kırmızı", "Yeşil"], correct: 2 },
       { question: "Kulak tıkacı ne için kullanılır?", choices: ["İşitmeden korunma", "Gürültü önleme", "Yük kaldırma"], correct: 1 },
       { question: "Gözlük hangi tür KKD'dir?", choices: ["Solunum", "Düşme önleyici", "Göz koruyucu", "Ayak koruyucu"], correct: 2 },
-      { question: "İSG nedir?", choices: ["İçsel Sağlık Güvencesi", "İleri Seviye Güç", "İşyeri Sistem Gelişimi"], correct: 0 },
+      { question: "İSG nedir?", choices: ["İş Sağlığı ve Güvenliği", "İleri Seviye Güç", "İşyeri Sistem Gelişimi"], correct: 0 },
       // ... (toplam 15 soru, örnek olarak 5'i burada gösterdim)
     ];
 
