--- a/success.html
+++ b/success.html
@@ -46,9 +46,10 @@
   <br>
   <button id="spin">Çevir!</button>
   <div id="result"></div>
+  <div class="qr-code">
+    <p>Detaylı bilgi için QR kodu tarayın:</p>
+    <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://www.detam.com.tr/&size=150x150" alt="QR Code" />
 
-  <!-- reCAPTCHA widget -->
-  <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
   <button id="confirmButton">Hediyemi Al</button>
 
   <script>
