--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         window.location.href = 'oyun.html';
   
       } catch (err) {
-        console.error('App Script hatası:', err);
+        console.error(err);
         alert('Sunucuya bağlanırken bir sorun oluştu. Lütfen tekrar deneyin.'); 
       }
     });
