--- a/success.html
+++ b/success.html
@@ -133,7 +133,7 @@
           headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
           body: new URLSearchParams({
             adSoyad: sessionStorage.getItem('ad'),
-            eposta:  sessionStorage.getItem('email'),
+            email:  sessionStorage.getItem('email'),
             telefon: sessionStorage.getItem('telefon'),
             odul:     kazanan
           })
