--- a/index.html
+++ b/index.html
@@ -39,30 +39,52 @@
   </form>
 
 
-
   <script>
-    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxrEUpQOXNWhVg8E_XwHU_sR1q3Ak4hpgLVncOw6Td9/exec'
-    ;
-  
-    // JSONP loader fonksiyonu
-    function loadRecordsJSONP() {
-      return new Promise((resolve, reject) => {
-        const callbackName = 'handleRecords_' + Date.now();
-        window[callbackName] = function(data) {
-          resolve(data);
-          delete window[callbackName];
+    
+
+    const SHEET_ID = '1vrDvGMuIwJuhDH-6fdQrlOT8f_Eo7tpGDNhtzA1s2Z4';
+  const GID      = 0;  // İlk sekme için genelde 0
+
+  function loadRecordsJSONP() {
+    return new Promise((resolve, reject) => {
+      const cb = 'handleRecords_' + Date.now();
+      const script = document.createElement('script');
+
+      // JSONP callback: rows dizisini çıkarıp resolve et
+      window[cb] = function(data) {
+        try {
+          const rows = data.table.rows.map(r => ({
+            adSoyad: r.c[0]?.v || '',
+            email:   r.c[1]?.v || '',
+            telefon: (r.c[2]?.v || '').toString().replace(/\D/g,''),
+            odul:     r.c[3]?.v || '',
+            tarih:    r.c[4]?.f || ''
+          }));
+          resolve(rows);
+        } catch (e) {
+          reject(e);
+        } finally {
+          delete window[cb];
           script.remove();
-        };
-        const script = document.createElement('script');
-        script.src = `${SCRIPT_URL}?action=getRecords&callback=${callbackName}&_=${Date.now()}`;
-        script.onerror = err => {
-          delete window[callbackName];
-          reject(err);
-          script.remove();
-        };
-        document.body.appendChild(script);
-      });
-    }
+        }
+      };
+
+      // tqx parametresi içindeki semicolon’u encode ederek
+      // responseHandler’ın parçalanmasını engelliyoruz
+      const tqxVal = `out:json;responseHandler:${cb}`;
+      const url    =
+        `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?` +
+        `gid=${GID}&tqx=${encodeURIComponent(tqxVal)}`;
+
+      script.src     = url;
+      script.onerror = err => {
+        delete window[cb];
+        script.remove();
+        reject(err);
+      };
+      document.body.appendChild(script);
+    });
+  }
   
     document.getElementById('startForm').addEventListener('submit', async function(e) {
       e.preventDefault();
