--- a/try-again.html
+++ b/try-again.html
@@ -30,11 +30,11 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="C:\Users\OG\Desktop\isg_final_with_success_chark_updated-20250409T063820Z-001\test\isg_final_with_success_chark_updated\detam.jpg" alt="Logo" />
+  <img class="logo" src="detam.jpg" alt="Logo" />
   <h1>Üzgünüz 😥</h1>
   <p>5'te 5 yapamadınız.</p>
   <p>Lütfen tekrar deneyin!</p>
-  <button onclick="window.location.href='index.html'">Tekrar Dene</button>
+  <button onclick="window.location.href='oyun.html'">Tekrar Dene</button>
 </body>
 <div class="qr-code">
   <p>Detaylı bilgi için QR kodu tarayın:</p>
