--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       background-color: #F7F7F7;
       padding: 40px 20px;
       border-radius: 12px;
-      box-shadow: 2 15px 12px #000000(0 0% 100% / 0.15);
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.8);
       max-width: 400px;
       width: 100%;
       text-align: center;
@@ -106,7 +106,6 @@
       <button type="submit" id="startBtn">Oyuna Başla</button>
     </form>
     <div class="qr-code">
-      <p>Detaylı bilgi için QR kodu tarayın:</p>
       <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://www.detam.com.tr/&size=150x150" alt="QR Code">
     </div>
   </div>
